--- a/.env
+++ b/.env
@@ -146,6 +146,7 @@ NEXT_PUBLIC_CLIMAX_POST_UPSERT_OFFICE_VOUCHER = https://odysseyserver-1-s1866516
 NEXT_PUBLIC_CLIMAX_CREATE_VOUCHER = https://odysseyserver-1-s1866516.deta.app/voucher/voucherCreation
 NEXT_PUBLIC_CLIMAX_GET_ACCOUNT_ACTIVITY = https://odysseyserver-1-s1866516.deta.app/voucher/getAccountActivity
 NEXT_PUBLIC_CLIMAX_POST_DELETE_VOUCHER = https://odysseyserver-1-s1866516.deta.app/voucher/deleteVoucher
+NEXT_PUBLIC_CLIMAX_POST_DELETE_BASE_VOUCHER = https://odysseyserver-1-s1866516.deta.app/voucher/deleteBaseVoucher
 NEXT_PUBLIC_CLIMAX_GET_ALL_VOUCHERS = https://odysseyserver-1-s1866516.deta.app/voucher/getAllVouchers
 NEXT_PUBLIC_CLIMAX_GET_VOUCHER_BY_ID = https://odysseyserver-1-s1866516.deta.app/voucher/getVoucherById
 NEXT_PUBLIC_CLIMAX_GET_VOUCHER_BY_ID_ADVANCED = https://odysseyserver-1-s1866516.deta.app/voucher/getVoucherByIdAdvanced
