--- a/.env.development
+++ b/.env.development
@@ -146,6 +146,7 @@ NEXT_PUBLIC_CLIMAX_POST_UPSERT_OFFICE_VOUCHER = http://localhost:8081/voucher/Of
 NEXT_PUBLIC_CLIMAX_CREATE_VOUCHER = http://localhost:8081/voucher/voucherCreation
 NEXT_PUBLIC_CLIMAX_GET_ACCOUNT_ACTIVITY = http://localhost:8081/voucher/getAccountActivity
 NEXT_PUBLIC_CLIMAX_POST_DELETE_VOUCHER = http://localhost:8081/voucher/deleteVoucher
+NEXT_PUBLIC_CLIMAX_POST_DELETE_BASE_VOUCHER = http://localhost:8081/voucher/deleteBaseVoucher
 NEXT_PUBLIC_CLIMAX_GET_ALL_VOUCHERS = http://localhost:8081/voucher/getAllVouchers
 NEXT_PUBLIC_CLIMAX_GET_VOUCHER_BY_ID = http://localhost:8081/voucher/getVoucherById
 NEXT_PUBLIC_CLIMAX_GET_VOUCHER_BY_ID_ADVANCED = http://localhost:8081/voucher/getVoucherByIdAdvanced
